[package]
name = "assert-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.7", features = ["derive"] }
crossbeam-utils = "0.8.5"
rand = "0.8.4"
rand_pcg = "0.3.1"
splinterdb-rs = { path = "../splinterdb-rs", features = ["serde"] }
